<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:paddingLeft="@dimen/listitem_start_padding"
    android:paddingRight="@dimen/listitem_start_padding">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/request_icon"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="@dimen/top_margin"/>

    <TextView
        android:id="@+id/request_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/request_icon"
        android:layout_marginTop="@dimen/top_margin"
        android:layout_marginLeft="@dimen/left_margin"/>

    <TextView
        android:id="@+id/condition"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/request_id"
        android:layout_alignBottom="@+id/request_icon"
        android:layout_toRightOf="@+id/request_icon"
        android:layout_marginTop="@dimen/top_margin"
        android:layout_marginLeft="@dimen/left_margin"/>

    <View
        android:id="@+id/profile_divider"
        android:layout_width="match_parent"
        android:layout_height="@dimen/divider_height"
        android:layout_below="@+id/condition"
        android:background="@color/divider_color"
        android:layout_marginTop="@dimen/top_margin"/>

    <TextView
        android:id="@+id/profile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/profile_divider"
        android:layout_marginTop="@dimen/top_margin"
        android:text="@string/profile_text"/>

    <TextView
        android:id="@+id/name_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name_text"
        android:layout_below="@+id/profile"
        android:layout_marginTop="@dimen/top_margin"/>

    <TextView
        android:id="@+id/name_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/name_id"
        android:layout_alignBottom="@+id/name_id"
        android:layout_marginTop="@dimen/top_margin"
        android:layout_marginLeft="@dimen/left_margin"/>

    <TextView
        android:id="@+id/appointment_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/name_id"
        android:text="@string/appointment_text"
        android:layout_marginTop="@dimen/top_margin"/>

    <TextView
        android:id="@+id/appointment_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/appointment_id"
        android:layout_alignBottom="@+id/appointment_id"
        android:layout_marginLeft="@dimen/left_margin"
        android:layout_marginTop="@dimen/top_margin"/>

    <TextView
        android:id="@+id/phone_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/appointment_id"
        android:text="@string/phone_text"
        android:layout_marginTop="@dimen/top_margin"/>

    <TextView
        android:id="@+id/phone_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/phone_id"
        android:layout_alignBottom="@+id/phone_id"
        android:layout_marginTop="@dimen/top_margin"
        android:layout_marginLeft="@dimen/left_margin"/>

    <TextView
        android:id="@+id/details_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/phone_id"
        android:text="@string/details_text"
        android:layout_marginTop="@dimen/top_margin"/>

    <TextView
        android:id="@+id/details_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/details_id"
        android:layout_alignBottom="@+id/details_id"
        android:layout_marginTop="@dimen/top_margin"
        android:layout_marginLeft="@dimen/left_margin"/>

    <View
        android:id="@+id/divider_button"
        android:layout_width="match_parent"
        android:layout_height="@dimen/divider_height"
        android:layout_below="@+id/details_text"
        android:background="@color/divider_color"
        android:layout_marginTop="@dimen/top_margin"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_below="@+id/divider_button"
        android:layout_marginTop="@dimen/top_margin"
        android:layout_marginLeft="@dimen/left_margin"
        android:layout_marginBottom="@dimen/top_margin">
        <Button
            android:id="@+id/accepted_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:text="@string/accept_text"/>
    </LinearLayout>
</RelativeLayout>